test: 로그인과 세션 유지 시나리오 검증